[package]
name = "shader-slang-sys"
version = "0.1.0"
edition = "2024"
description = "FFI bindings for the Slang shader language compiler"
repository = "https://github.com/FloatyMonkey/slang-rs"
license = "MIT OR Apache-2.0"
categories = ["compilers", "external-ffi-bindings"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[build-dependencies]
bindgen = "0.72.0"
dotenvy = "0.15.0" 
dotenvy_macro = "0.15.7"
project-root = "0.2.2"

[features]
serde = ["dep:serde"]
